// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid/> Debe de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Death Note
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="CualquierCosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="CualquierCosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el <GifGrid/> Debe de mostrarse corectamente 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Death Note
  </h3>
  <p
    className="card animate__animated flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
